--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<script type="importmap">
 			{
 				"imports": {
-					"three": "../build/three.module.js"
+					"three": "./build/three.module.js"
 				}
 			}
 		</script>
